# chronik-stream

./: .dockerignore  .gitignore  ACTUAL_BOTTLENECK_ANALYSIS.md  BARE_METAL_PERFORMANCE.md  BASELINE_PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  CLUSTERING_COMPLETION_ROADMAP.md  CLUSTER_HANG_ROOT_CAUSE.md  CLUSTER_RDKAFKA_HANG_ANALYSIS.md  COMPLEXITY_ANALYSIS.md  CONTRIBUTING.md  CORRELATION_ID_AUDIT.md  CRITICAL_ISSUES.md  Cargo.docker.toml  Cargo.toml  Cross.toml  DEBUGGING_GUIDE.md  DOCKER_BUILD_v1.3.12.md  DOCKER_PUBLISH.md  DUPLICATION_FIX_TRACKING.md  Dockerfile  Dockerfile.all-in-one  Dockerfile.all-in-one.combined  Dockerfile.all-in-one.optimized  Dockerfile.binary  Dockerfile.buildkit  Dockerfile.operator  Dockerfile.operator.binary  Dockerfile.search  Dockerfile.simple  FIXES_v1.3.12.md  FIX_PLAN_v1.3.20.md  FIX_PROGRESS.md  FIX_SUMMARY.md  FSYNC_DECOUPLING_COMPARISON.md  FSYNC_QUEUEING_ANALYSIS.md  HOW_TO_RUN_AND_TEST.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY_v1.3.12.md  (+130 more)
benchmarks/rust/: Cargo.toml
bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/chronik-admin/: Cargo.toml
crates/chronik-all-in-one/: Cargo.toml
crates/chronik-auth/: Cargo.toml
crates/chronik-backup/: Cargo.toml
crates/chronik-bench/: BENCHMARK_SUMMARY.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_RESULTS.md  kafka_comparison.sh  performance_test_suite.sh  test_benchmark.sh
crates/chronik-benchmarks/: Cargo.toml
crates/chronik-cli/: BATCH_OPERATIONS.md  Cargo.toml  README.md
crates/chronik-columnar/: Cargo.toml
crates/chronik-common/: Cargo.toml
crates/chronik-config/: Cargo.toml
crates/chronik-controller/: Cargo.toml  build.rs
crates/chronik-embeddings/: Cargo.toml
crates/chronik-ingest/: Cargo.toml  README.md  README_PRODUCE_HANDLER.md  build.rs
crates/chronik-janitor/: Cargo.toml
crates/chronik-memory/: Cargo.toml  README.md
crates/chronik-monitoring/: Cargo.toml
crates/chronik-operator/: Cargo.toml  Dockerfile  Makefile  README.md
crates/chronik-perf/: Cargo.toml
crates/chronik-protocol/: Cargo.toml  KAFKA_PROTOCOL.md  MISSING_APIS.md
crates/chronik-query/: Cargo.toml
crates/chronik-raft/: Cargo.toml  EXAMPLES.md  FETCHHANDLER_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PHASE1_SUMMARY.md  PHASE3_CLUSTER_BOOTSTRAP.md  PHASE4_FOLLOWER_READS_REPORT.md  PHASE4_SUMMARY.md  README.md  VERIFICATION.txt  build.rs  test_read_index.sh
crates/chronik-raft-bridge/: Cargo.toml
crates/chronik-search/: Cargo.toml  README.md
crates/chronik-server/: Cargo.toml
test-basic/: Cargo.toml
test-basic/src/: main.rs
tests/: COMPATIBILITY_RESULTS.md  Cargo.toml  Dockerfile.client-tests  README.md  SEGMENT_FETCH_FIX_RESULTS.md  TEST_INVENTORY.md  TestKsqlAdminClient.java  analyze_describecluster.py  analyze_responses.py  audit_results.json  bench_all_profiles.py  bench_hot_text_freshness.sh  bench_hot_text_regression.sh  bench_hot_vector.sh  bench_hot_vector_openai.sh  check_metadata.py  debug_apiversions.py  debug_wal.py  decode_describecluster_v4.py  docker-compose.cp-kafka.yml  docker-compose.kafka-simple.yml  docker-compose.kafka-standard.yml  docker-compose.kafka.yml  docker-compose.user-kafka.yml  fast_wal_test.py  generate-compatibility-report.py  issue2_matrix.sh  kafka-test-compose.yml  phase1_election_stability_test.sh  phase1_quick_test.sh  phase5_comprehensive_test.sh  phase5_debug_test.sh  phase5_simple_test.sh  quick_wal_test.py  raft_chaos_test.py  run-client-tests.sh  run_all_tests.sh  run_tests.sh  simple_wal_test.py  stability_test_suite.sh  (+104 more)
tests/cluster/: README.md  node1.toml  node2.toml  node3.toml  regression_scale.sh  restart.sh  start.sh  stop.sh
tests/compat-tests/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yaml  simple-test.py  validate-test.sh
tests/compatibility/: test_kafka_comparison.py
tests/consumer-group/: README.md  produce_first.py  test_consumer_after_flush.py  test_consumer_debug.py  test_consumer_final.py  test_consumer_fix.py  test_consumer_simple.py  test_fetch_fix.py  test_simple_consumer.py  test_simple_fetch.py
tests/docker/: test_docker_v053.sh
tests/e2e/: test_query_orchestrator.sh
tests/go/: debug_librdkafka.go  debug_with_lldb.sh  go.mod  go.sum  minimal_kafka.go  test_cp_kafka.go  test_downgraded.go  test_go_client.go  test_kafka_19092.go  test_produce_debug.go  test_produce_version.go  test_raw_produce.go  test_real_kafka.go  test_sarama.go  test_through_proxy.go  test_versions.sh  test_via_proxy.go
tests/hurl/: 01_health.hurl  02_sql_api.hurl  03_search_api.hurl  04_schema_registry.hurl  05_admin_api.hurl  06_vector_search.hurl  07_integration_workflow.hurl  08_hot_cold_sql.hurl  README.md  run_tests.sh
tests/integration/: Dockerfile.test  Dockerfile.tests  README.md  admin_api_test.rs  basic_components_test.rs  canonical_crc_test.rs  cluster.rs  cluster_broker_discovery_test.rs  common.rs  consumer_groups.rs  data_flow.rs  docker-compose.yml  end_to_end_test.rs  failure_recovery_test.rs  kafka_compatibility_test.rs  kafka_protocol.rs  kafka_protocol_test.rs  mod.rs  multi_language_client_test.rs  partition_assignment_persistence.rs  performance_test.rs  raft_cluster_bootstrap.rs  raft_cluster_e2e.rs  raft_cluster_integration.rs  raft_multi_partition.rs  raft_network_test.rs  raft_phase4_integration.rs  raft_produce_path_test.rs  raft_single_node_debug.rs  raft_single_partition.rs  raft_snapshot_test.rs  real_kafka_clients_test.rs  search.rs  search_integration_test.rs  storage_test.rs  test_basic_compatibility.py  test_basic_functionality.py  test_batch_round_trip.rs  test_crc32c_validation.py  test_deployment.py  (+11 more)
tests/k8s-perf/: 00-namespace.yaml  01-chronik-standalone.yaml  02-chronik-metrics-service.yaml  03-chronik-cluster.yaml  10-ingestor-deployment.yaml  100-wands-loader-configmap.yaml  101-wands-loader-job.yaml  102-wands-quality-configmap.yaml  103-wands-quality-job.yaml  105-amazon-loader-configmap.yaml  106-amazon-loader-job.yaml  107-amazon-scale-configmap.yaml  108-amazon-scale-test.yaml  11-ingestor-service.yaml  (+68 more)
(+1654 files in other folders)
