[workspace]
resolver = "2"
members = [
    "crates/chronik-common",
    "crates/chronik-protocol",
    "crates/chronik-storage",
    "crates/chronik-search",
    "crates/chronik-query",
    "crates/chronik-monitoring",
    "crates/chronik-auth",
    "crates/chronik-cli",
    "crates/chronik-benchmarks",
    "crates/chronik-backup",
    "crates/chronik-config",
    "crates/chronik-server",
    "crates/chronik-wal",
]
exclude = ["tests"]

[workspace.package]
version = "1.3.14"
edition = "2021"
authors = ["Chronik Stream Contributors"]
license = "Apache-2.0"
repository = "https://github.com/chronik-stream/chronik-stream"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.5", features = ["serde"] }
byteorder = "1.5"
bincode = "1.3"

# Kafka protocol (Apache 2.0)
kafka-protocol = "0.10"

# Search engine (MIT)
tantivy = "0.24"

# Storage
opendal = { version = "0.45", default-features = false, features = ["rustls", "services-s3", "services-gcs", "services-azblob", "layers-metrics"] }
# Add vendored OpenSSL for musl builds
openssl = { version = "0.10", features = ["vendored"] }
flate2 = "1.0"
crc32fast = "1.3"
snap = "1.1"
lz4_flex = "0.11"

# Database
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Kubernetes (Apache 2.0)
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Consensus (Apache 2.0)
raft = "0.7"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
murmur2 = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
testcontainers = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "zstd"] }
reqwest = { version = "0.11", features = ["json"] }
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling

[profile.bench]
inherits = "release"
