[workspace]
resolver = "2"
members = [
    "crates/chronik-common",
    "crates/chronik-protocol",
    "crates/chronik-storage",
    "crates/chronik-search",
    "crates/chronik-query",
    "crates/chronik-monitoring",
    "crates/chronik-backup",
    "crates/chronik-config",
    "crates/chronik-server",
    "crates/chronik-wal",
    "crates/chronik-bench",
    "crates/chronik-raft-bridge",
    "crates/chronik-raft",
    "crates/chronik-columnar",
    "crates/chronik-embeddings",
    "crates/chronik-operator",
    "crates/chronik-perf",
]
exclude = ["tests"]

[workspace.package]
version = "2.3.0"
edition = "2021"
authors = ["Chronik Stream Contributors"]
license = "Apache-2.0"
repository = "https://github.com/chronik-stream/chronik-stream"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Web framework
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.5", features = ["serde"] }
byteorder = "1.5"
bincode = "1.3"

# Kafka protocol (Apache 2.0)
kafka-protocol = "0.10"

# Search engine (MIT)
tantivy = "0.24"

# Storage
opendal = { version = "0.45", default-features = false, features = ["rustls", "services-s3", "services-gcs", "services-azblob", "layers-metrics"] }
# Add vendored OpenSSL for musl builds
openssl = { version = "0.10", features = ["vendored"] }
flate2 = "1.0"
crc32fast = "1.3"
snap = "1.1"
lz4_flex = "0.11"

# Database
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Kubernetes (Apache 2.0)
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Consensus (v2.5.0+)
# Raft for metadata/leader election, WAL streaming for data replication
# Using vendored raft crate with prost 0.12 compatibility (see [patch] section)
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }

# gRPC for Raft network layer (upgraded with vendored raft crate)
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Logging for Raft
slog = "2.7"
slog-stdlog = "4.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
prometheus = { version = "0.13", features = ["process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
murmur2 = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Build dependencies
tonic-build = "0.11"

# TLS for Kafka Protocol
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
testcontainers = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "zstd"] }
reqwest = { version = "0.11", features = ["json"] }
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true  # Enable debug symbols for profiling

[profile.bench]
inherits = "release"

# Patch raft crates with vendored versions for prost 0.12 compatibility
[patch.crates-io]
raft = { path = "crates/raft" }
raft-proto = { path = "crates/raft-proto" }
