[package]
name = "test-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
chronik-protocol = { path = "../crates/chronik-protocol" }
chronik-storage = { path = "../crates/chronik-storage" }
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }