[package]
name = "chronik-integration-tests"
version = "0.1.0"
edition = "2021"

[features]
raft = ["chronik-server/raft"]

[workspace]
# Empty workspace to make this package standalone

[[test]]
name = "integration"
path = "integration/mod.rs"

[[test]]
name = "raft_single_partition"
path = "integration/raft_single_partition.rs"
required-features = ["raft"]

[dependencies]
chronik-common = { path = "../crates/chronik-common" }
chronik-protocol = { path = "../crates/chronik-protocol" }
chronik-raft = { path = "../crates/chronik-raft" }
chronik-storage = { path = "../crates/chronik-storage" }
chronik-wal = { path = "../crates/chronik-wal" }
chronik-server = { path = "../crates/chronik-server" }
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
bytes = { version = "1.5", features = ["serde"] }
crc32fast = "1.3"
byteorder = "1.5"
async-trait = "0.1"
tonic = "0.12"
bincode = "1.3"

# Test dependencies
testcontainers = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "zstd"] }
reqwest = { version = "0.11", features = ["json"] }
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
opendal = { version = "0.45", default-features = false, features = ["rustls", "services-s3", "services-gcs", "services-azblob", "layers-metrics"] }

# For time measurements
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies for WAL testing
base64 = "0.21"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[dev-dependencies]
# Additional test utilities
pretty_assertions = "1.4"
env_logger = "0.11"