[package]
name = "chronik-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
chronik-protocol = { path = "../../crates/chronik-protocol" }
chronik-storage = { path = "../../crates/chronik-storage" }
chronik-ingest = { path = "../../crates/chronik-ingest" }
chronik-common = { path = "../../crates/chronik-common" }

tokio = { version = "1.39", features = ["full"] }
bytes = "1.5"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
rand = "0.8"
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4"] }

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "produce_bench"
harness = false

[profile.bench]
debug = false