[package]
name = "chronik-memory-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the chronik-memory agent-memory SDK"
license = "Apache-2.0"
repository = "https://github.com/chronik-stream/chronik-stream"
publish = false

[lib]
# `cdylib` is what maturin links into the Python wheel. `rlib` keeps `cargo
# check`/`cargo test` working on this crate from inside the workspace —
# without it, the workspace check would skip this crate's tests.
name = "chronik_memory_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
chronik-memory = { path = "../../crates/chronik-memory" }

# PyO3 0.22 + pyo3-async-runtimes 0.22 is the current stable pair. We use
# `extension-module` so the resulting cdylib doesn't link libpython
# (PyPI policy + portability across CPython builds).
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Re-used to convert MemoryRecord / RecallResult into Python dicts via
# JSON round-trip. We don't expose Pydantic-style typed classes from the
# Rust side; that layering lives in `chronik_memory/types.py` (Phase 3.1
# polish task).
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
