[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "chronik-memory"
version = "0.1.0"
description = "Agent-memory SDK on top of Chronik Stream — Python bindings"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Chronik Stream Contributors" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/chronik-stream/chronik-stream"
Repository = "https://github.com/chronik-stream/chronik-stream"
Issues = "https://github.com/chronik-stream/chronik-stream/issues"

[tool.maturin]
# Build the cdylib in-tree. The package name in Python is
# `chronik_memory` — same module name as the Rust SDK, no underscore vs
# dash confusion. Maturin generates the wheel `chronik_memory-*.whl`.
module-name = "chronik_memory"
features = ["pyo3/extension-module"]
# Resolve the workspace from one level up — `bindings/python/Cargo.toml`
# is a member of the root workspace, so we point maturin at the correct
# manifest. Otherwise maturin tries to build the workspace's primary
# crate (`chronik-server`) and pulls in the entire WAL/Raft tree.
manifest-path = "Cargo.toml"
