[package]
name = "chronik-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chronik-admin"
path = "src/main.rs"

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-controller = { path = "../chronik-controller" }
chronik-auth = { path = "../chronik-auth" }
chronik-monitoring = { path = "../chronik-monitoring" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = "0.14"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database - using TiKV via chronik-common

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = "0.13"

# OpenAPI
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }