[package]
name = "chronik-all-in-one"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "All-in-one Chronik Stream server - single binary for easy deployment"

[[bin]]
name = "chronik"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Error handling
anyhow = { workspace = true }

[features]
default = []