[package]
name = "chronik-all-in-one"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "All-in-one Chronik Stream server - single binary for easy deployment"

[lib]
name = "chronik_all_in_one"
path = "src/lib.rs"

[[bin]]
name = "chronik"
path = "src/main.rs"

[dependencies]
# Core chronik components
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }
chronik-storage = { path = "../chronik-storage" }
chronik-ingest = { path = "../chronik-ingest" }
chronik-search = { path = "../chronik-search" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Storage
sled = "0.34"

# Time
chrono = { workspace = true }
uuid = { workspace = true }

# Networking
axum = { workspace = true }

# Metrics
prometheus = { workspace = true }

[features]
default = []