[package]
name = "chronik-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
webpki-roots = "0.25"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"

# SASL
sasl2-sys = { version = "0.1", optional = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[features]
default = []
sasl = ["sasl2-sys"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"