[package]
name = "chronik-bench"
version = "0.1.0"
edition = "2021"
authors = ["Chronik Team"]
description = "High-performance benchmark harness for Chronik streaming platform"
license = "Apache-2.0"

[[bin]]
name = "chronik-bench"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "libz"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics and histograms
hdrhistogram = "7.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Prometheus metrics (optional)
prometheus = { version = "0.13", optional = true }
warp = { version = "0.3", optional = true }
lazy_static = { version = "1.5", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
human_bytes = "0.4"
indicatif = "0.17"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
prometheus = ["dep:prometheus", "dep:warp", "dep:lazy_static"]

[dev-dependencies]
tempfile = "3.12"
