[package]
name = "chronik-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }
chronik-storage = { path = "../chronik-storage" }
# chronik-ingest removed - use chronik-server instead
chronik-search = { path = "../chronik-search" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
num_cpus = "1.16"
hostname = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Metrics and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = { workspace = true }

# Statistics
statistical = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Testing
tempfile = { workspace = true }

[[bench]]
name = "produce_throughput"
harness = false

[[bench]]
name = "search_latency"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bin]]
name = "benchmark-runner"
path = "src/main.rs"