[package]
name = "chronik-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chronik-ctl"
path = "src/main.rs"

[dependencies]
chronik-common = { path = "../chronik-common" }

# CLI
clap = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Output formatting
tabled = "0.15"
colored = "2.1"

# Password input
rpassword = "7.3"

# Error handling
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"