[package]
name = "chronik-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Metadata storage
# tikv-client = { workspace = true }  # Removed - not needed
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"