[package]
name = "chronik-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Configuration
config = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Watch for file changes
notify = "6.1"

# State management
arc-swap = "1.6"
dashmap = { workspace = true }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }