[package]
name = "chronik-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }
chronik-storage = { path = "../chronik-storage" }
chronik-monitoring = { path = "../chronik-monitoring" }
chronik-auth = { path = "../chronik-auth" }
chronik-search = { path = "../chronik-search" }

# Async runtime
tokio = { workspace = true, features = ["net", "sync", "time"] }
tokio-util = { workspace = true }
tokio-rustls = "0.24"
async-trait = { workspace = true }
futures = { workspace = true }

# Collections
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
base64 = "0.22"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"

# TiKV client for direct access (for cleanup)
tikv-client = "0.3"

# Hashing
murmur2 = { workspace = true }

# HTTP
axum = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing & Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "chronik-ingest"
path = "src/main.rs"