[package]
name = "chronik-memory"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-native agent-memory SDK for Chronik. Hybrid retrieval (BM25 + vector + SQL) over Kafka-compatible event streams."
readme = "README.md"
keywords = ["agent", "memory", "rag", "kafka", "chronik"]
categories = ["database", "asynchronous"]

# Independent version track from chronik-stream platform (currently 2.5.5).
# This crate follows its own semver — see docs/ROADMAP_AGENT_MEMORY_SDK.md.

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# HTTP (Chronik unified API on port 6092)
reqwest = { workspace = true }

# Kafka client (mem.raw.* producer + worker consumer)
rdkafka = { workspace = true }

# Time + IDs
chrono = { workspace = true }
ulid = "1.1"

# Error handling
thiserror = { workspace = true }

# Idempotency
sha2 = "0.10"
hex = "0.4"
lru = "0.12"
parking_lot = { workspace = true }

# Extractor: rule-pass regex (AMS-1.3)
regex = "1.10"

# Tracing
tracing = { workspace = true }
# tracing-subscriber: needed by the standalone worker binary (AMS-2.2). Kept
# in regular deps (not dev-deps) since `cargo install chronik-memory` should
# work for the binary without requiring a feature flag.
tracing-subscriber = { workspace = true }

# Phase 1 extractor providers (Anthropic uses reqwest directly — no provider SDK dep)
# OpenAI / Ollama / vLLM added in Phase 2 (AMS-2.3) — same pattern, plain reqwest.

[dev-dependencies]
tokio-test = "0.4"
serde_json = { workspace = true }
tempfile = "3.8"
# Mock HTTP server for AnthropicExtractor unit tests (AMS-1.3)
wiremock = "0.6"

[features]
default = []
# Phase 3 features (gated; not implemented in Phase 1)
# rerank = []
# acl = []
# concept = []
# summarize = []
# local-embed = []
