[package]
name = "chronik-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# HTTP server for metrics endpoint
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }