[package]
name = "chronik-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }

# Tracing - use http-proto instead of tonic to avoid tonic version conflicts
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.15", default-features = false, features = ["http-proto", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }

# HTTP server for metrics endpoint
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }